syntax = "proto3";

package authentication.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "redact/v3/redact.proto";

import "user/service/v1/user.proto";
import "user/service/v1/role.proto";

import "authentication/service/v1/user_token.proto";

// User login authentication service
service AuthenticationService {
  // User login
  rpc Login (LoginRequest) returns (LoginResponse) {}

  // User logout
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty) {}

  // Register user
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}


  // Refresh authentication token
  rpc RefreshToken (LoginRequest) returns (LoginResponse) {}

  // Validate token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}

  // Get access token list
  rpc GetAccessTokens(GetAccessTokensRequest) returns (GetAccessTokensResponse) {}


  // Get current user identity information
  rpc WhoAmI(google.protobuf.Empty) returns (WhoAmIResponse) {}
}

// Grant type
enum GrantType {
  password = 0; // Password mode (Resource Owner Password Credentials Grant)
  client_credentials = 1; // Client credentials mode (Client Credentials Grant)
  authorization_code = 2; // Authorization code mode (Authorization Code Grant)
  refresh_token = 3;  // Refresh token (Refresh Token)
  implicit = 4;  // Implicit mode (Implicit Grant)
}

// Token type
enum TokenType {
  bearer = 0; // Bearer
  mac = 1; // MAC
}

// Client type
enum ClientType {
  admin = 0; // Admin client
  app = 1; // APP
}

// Token category
enum TokenCategory {
  TOKEN_CATEGORY_UNSPECIFIED = 0; // Inferred by server based on token (default)

  ACCESS = 1;  // Access token
  REFRESH = 2; // Refresh token
}

// User backend login - Request
message LoginRequest {
  GrantType grant_type = 1 [
    json_name = "grant_type",
    (google.api.field_behavior) = REQUIRED,
    (gnostic.openapi.v3.property) = {
      description: "Grant type, the value here is fixed as \"password\", required.",
      default: {string: "password"}
    }
  ]; // Grant type, the value here is fixed as "password", required.

  optional string client_id = 2 [
    json_name = "client_id",
    (gnostic.openapi.v3.property) = {
      description: "Client ID"
    }
  ];
  optional string client_secret = 3 [
    json_name = "client_secret",
    (gnostic.openapi.v3.property) = {
      description: "Client secret"
    }
  ];

  optional string scope = 4 [
    json_name = "scope",
    (gnostic.openapi.v3.property) = {
      description: "Space-separated list of user-granted scopes. If not provided, any scope is authorized, defaults to empty list."
    }
  ]; // Space-separated list of scopes. If not provided, any scope is authorized, defaults to empty list.

  optional string redirect_uri = 5 [
    json_name = "redirect_uri",
    (gnostic.openapi.v3.property) = {description: "Redirect URI"}
  ]; // Redirect URI

  optional string username = 10 [
    json_name = "username",
    (gnostic.openapi.v3.property) = {description: "Username"}
  ]; // Username, required.

  optional string password = 11 [
    (redact.v3.value).string = "",
    json_name = "password",
    (gnostic.openapi.v3.property) = {description: "User password"}
  ]; // User password, required.

  optional uint32 user_id = 12 [
    json_name = "user_id",
    (gnostic.openapi.v3.property) = {
      description: "User ID"
    }
  ]; // User ID

  optional string refresh_token = 20 [
    json_name = "refresh_token",
    (gnostic.openapi.v3.property) = {
      description: "Refresh token, used to obtain the next access token, optional. If the access token is about to expire, returning a refresh token is useful, as the application can use the refresh token to obtain another access token. However, tokens issued through implicit grant cannot issue refresh tokens."
    }
  ]; // Refresh token, used to obtain the next access token, required.

  optional string code = 30 [
    json_name = "code",
    (gnostic.openapi.v3.property) = {
      description: "One-time verification/authentication code received in the authorization request. (When using authorization code mode)"
    }
  ]; // One-time verification/authentication code received in the authorization request. (When using authorization code mode)

  optional ClientType client_type = 40 [
    json_name = "client_type",
    (gnostic.openapi.v3.property) = {
      description: "Client type"
    }
  ]; // Client type

  optional string device_id = 50 [
    json_name = "device_id",
    (gnostic.openapi.v3.property) = {
      description: "Device unique identifier (optional), used for device binding, push notifications, risk control, etc."
    }
  ];
}

// User backend login - Response
message LoginResponse {
  TokenType token_type = 1 [
    json_name = "token_type",
    (gnostic.openapi.v3.property) = {
      description: "Token type, case-insensitive, required, can be bearer type or mac type, usually just the string \"Bearer\".",
      default: {string: "Bearer"}
    }
  ]; // Token type, case-insensitive, required, can be bearer type or mac type.

  string access_token = 2 [
    json_name = "access_token",
    (gnostic.openapi.v3.property) = {
      description: "Access token, required. The access token string issued by the authorization server."
    }
  ]; // Access token, required.

  int64 expires_in = 3 [
    json_name = "expires_in",
    (gnostic.openapi.v3.property) = {
      description: "Access token expiration time (seconds)"
    }
  ]; // Access token expiration time (seconds)

  optional string refresh_token = 4 [
    json_name = "refresh_token",
    (gnostic.openapi.v3.property) = {
      description: "Refresh token, used to obtain the next access token, optional. If the access token is about to expire, returning a refresh token is useful, as the application can use the refresh token to obtain another access token. However, tokens issued through implicit grant cannot issue refresh tokens."
    }
  ]; // Refresh token, used to obtain the next access token, optional.

  optional string scope = 5 [
    json_name = "scope",
    (gnostic.openapi.v3.property) = {
      description: "Space-separated list of user-granted scopes. If not provided, any scope is authorized, defaults to empty list."
    }
  ]; // Space-separated list of user-granted scopes. If not provided, any scope is authorized, defaults to empty list.

  optional int64 refresh_expires_in = 6 [
    json_name = "refresh_expires_in",
    (gnostic.openapi.v3.property) = {
      description: "Refresh token expiration time (seconds)"
    }
  ]; // Refresh token expiration time (seconds)

  optional string id_token = 7 [
    json_name = "id_token",
    (gnostic.openapi.v3.property) = {
      description: "ID token, JWT format token defined in OpenID Connect extension"
    }
  ]; // ID token, JWT format token defined in OpenID Connect extension

  // MFA fields: present only when multi-factor authentication is required
  optional bool mfa_required = 30 [
    json_name = "mfa_required",
    (gnostic.openapi.v3.property) = {
      description: "If true, access_token is empty and the client must complete MFA verification using mfa_token"
    }
  ];

  optional string mfa_token = 31 [
    json_name = "mfa_token",
    (gnostic.openapi.v3.property) = {
      description: "Short-lived token (5 min) for MFA verification flow. Present only when mfa_required=true"
    }
  ];

  repeated string mfa_methods = 32 [
    json_name = "mfa_methods",
    (gnostic.openapi.v3.property) = {
      description: "List of enrolled MFA methods available for verification (e.g. TOTP, BACKUP_CODE)"
    }
  ];
}

// User logout - Request
message LogoutRequest {
  uint32 user_id = 1 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {
      description: "User ID"
    }
  ]; // User ID

  ClientType client_type = 2 [
    json_name = "clientType",
    (gnostic.openapi.v3.property) = {
      description: "Client type"
    }
  ]; // Client type
}

// Validate token - Request
message ValidateTokenRequest {
  uint32 user_id = 1 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {
      description: "User ID"
    }
  ]; // User ID

  string token = 2 [
    json_name = "token",
    (gnostic.openapi.v3.property) = {
      description: "Token"
    }
  ]; // Token

  ClientType client_type = 3 [
    json_name = "clientType",
    (gnostic.openapi.v3.property) = {
      description: "Client type"
    }
  ]; // Client type

  TokenCategory token_category = 4 [
    json_name = "tokenCategory",
    (gnostic.openapi.v3.property) = {
      description: "Expected token category to validate: ACCESS=access token, REFRESH=refresh token. If not specified, the server may try to infer the handling method based on the token."
    }
  ];
}

// Validate token - Response
message ValidateTokenResponse {
  bool is_valid = 1 [
    json_name = "isValid",
    (gnostic.openapi.v3.property) = {
      description: "Whether the token is valid"
    }
  ]; // Whether the token is valid

  optional UserTokenPayload claim = 2 [
    json_name = "claim",
    (gnostic.openapi.v3.property) = {
      description: "User token payload"
    }
  ]; // User token payload
}

message RegisterUserRequest {
  string username = 1 [
    json_name = "username",
    (gnostic.openapi.v3.property) = {
      description: "Username"
    }
  ]; // Username

  string password = 2 [
    json_name = "password",
    (gnostic.openapi.v3.property) = {
      description: "Login password"
    }
  ]; // Login password

  string tenant_code = 3 [
    json_name = "tenantCode",
    (gnostic.openapi.v3.property) = {
      description: "Tenant code"
    }
  ]; // Tenant code

  optional string email = 4 [
    json_name = "email",
    (gnostic.openapi.v3.property) = {
      description: "Email address"
    }
  ]; // Email address
}
message RegisterUserResponse {
  uint32 user_id = 1;
}

// Get current user identity information - Response
message WhoAmIResponse {
  uint32 user_id = 1 [
    json_name = "uid",
    (gnostic.openapi.v3.property) = {
      description: "User ID"
    }
  ]; // User ID

  string username = 2 [
    json_name = "username",
    (gnostic.openapi.v3.property) = {
      description: "Current user's username"
    }
  ]; // Current user's username
}

message GetAccessTokensRequest {
  uint32 user_id = 1 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {
      description: "User ID"
    }
  ]; // User ID

  ClientType client_type = 2 [
    json_name = "clientType",
    (gnostic.openapi.v3.property) = {
      description: "Client type"
    }
  ]; // Client type
}
message GetAccessTokensResponse {
  repeated string access_tokens = 1 [
    json_name = "accessTokens",
    (gnostic.openapi.v3.property) = {
      description: "Access token list"
    }
  ]; // Access token list
}
