syntax = "proto3";

package authentication.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "redact/v3/redact.proto";

import "authentication/service/v1/user_credential.proto";

// OAuth service interface
service OAuthService {
  // List all linked third-party accounts for current user (supports pagination)
  rpc ListLinkedAccounts(ListLinkedAccountsRequest) returns (ListLinkedAccountsResponse) {}

  // Get details of a single linked account (does not return plaintext refresh/access tokens)
  rpc GetLinkedAccount(GetLinkedAccountRequest) returns (GetLinkedAccountResponse) {}

  // Start linking flow (returns authorization_url or verification_id, etc.)
  rpc StartLinkOAuth(StartLinkOAuthRequest) returns (StartLinkOAuthResponse) {}

  // Confirm linking: frontend submits code/token/verification_id to complete linking
  rpc ConfirmLinkOAuth(ConfirmLinkOAuthRequest) returns (ConfirmLinkOAuthResponse) {}

  // Compatibility: direct linking (if oauth_token/code already available, can create directly)
  rpc LinkOAuth(LinkOAuthRequest) returns (LinkOAuthResponse) {}

  // Unlink (by provider or linked credential id)
  rpc UnlinkOAuth(UnlinkOAuthRequest) returns (google.protobuf.Empty) {}

  // Revoke all tokens/access rights for specified linked credential (security-oriented/forced revocation)
  rpc RevokeLinkedAccount(RevokeLinkedAccountRequest) returns (google.protobuf.Empty) {}

  // Use refresh token to refresh access token (implementation may choose to only return metadata)
  rpc RefreshOAuthToken(RefreshOAuthTokenRequest) returns (RefreshOAuthTokenResponse) {}

  // Exchange token using code received by server (commonly used in server-side OAuth flow)
  rpc ExchangeOAuthCode(ExchangeOAuthCodeRequest) returns (ExchangeOAuthCodeResponse) {}

  // List supported OAuth providers and their metadata (authorization endpoints, scope suggestions, etc.)
  rpc ListProviders(ListProvidersRequest) returns (ListProvidersResponse) {}

  // Get metadata for a single provider
  rpc GetProviderMetadata(GetProviderMetadataRequest) returns (ProviderMetadata) {}
}

// Third-party OAuth account service
enum OAuthProvider {
  OAUTH_PROVIDER_UNSPECIFIED = 0; // Unspecified

  WECHAT = 1; // WeChat
  QQ = 2; // QQ
  WEIBO = 3; // Weibo
  DOUYIN = 4; // Douyin (TikTok China)
  KUAISHOU = 5; // Kuaishou
  BAIDU = 6; // Baidu
  ALIPAY = 7; // Alipay
  TAOBAO = 8; // Taobao
  JD = 9; // JD.com
  MEITUAN = 10; // Meituan
  DINGTALK = 11; // DingTalk
  BILIBILI = 12; // Bilibili
  XIAOHONGSHU = 13; // Xiaohongshu (Little Red Book)

  GOOGLE = 100; // Google
  FACEBOOK = 101; // Facebook
  APPLE = 102; // Apple
  TELEGRAM = 103; // Telegram
  TWITTER = 104; // Twitter
  LINKEDIN = 105; // LinkedIn
  GITHUB = 106; // GitHub
  MICROSOFT = 107; // Microsoft
  DISCORD = 108; // Discord
  SLACK = 109; // Slack
  INSTAGRAM = 110; // Instagram
  TIKTOK = 111; // TikTok
  REDDIT = 112; // Reddit
  YOUTUBE = 113; // YouTube
  SPOTIFY = 114; // Spotify
  PINTEREST = 115; // Pinterest
  SNAPCHAT = 116; // Snapchat
  TUMBLR = 117; // Tumblr
  YAHOO = 118; // Yahoo
  WHATSAPP = 119; // WhatsApp
  LINE = 120; // LINE
}

// OAuth grant type
enum OAuthGrantType {
  OAUTH_GRANT_UNSPECIFIED = 0;

  CLIENT_CREDENTIALS = 1; // client_credentials
  AUTHORIZATION_CODE = 2; // authorization_code
  IMPLICIT = 3;           // implicit
  PASSWORD = 4;           // password
  REFRESH_TOKEN = 5;      // refresh_token (used to indicate credential source/purpose)
}

// Simplified token representation (be careful when returning)
message OAuthToken {
  string access_token = 1 [(redact.v3.value).string = ""];
  optional string refresh_token = 2 [(redact.v3.value).string = ""];
  repeated string scopes = 3;
  optional google.protobuf.Timestamp expires_at = 4;
}

message ListLinkedAccountsRequest {
  optional string user_id = 1;
  optional uint32 page_size = 2;
  optional string page_token = 3;
}
message ListLinkedAccountsResponse {
  repeated UserCredential items = 1 [json_name = "items"];
  uint64 total = 2 [json_name = "total"];
  string next_page_token = 3 [json_name = "nextPageToken"];
}

// Link third-party account request
message LinkOAuthRequest {
  OAuthProvider provider = 1 [json_name = "provider"];
  string provider_custom = 2 [json_name = "providerCustom"]; // Optional: fill in when using custom platform or refined identifier
  string oauth_token = 3 [(redact.v3.value).string = "", json_name = "oauthToken"];         // Token / code returned by third party
  string redirect_uri = 4 [json_name = "redirectUri"];       // Optional: used for callback verification on some platforms
}

// Link response (contains created LinkedAccount)
message LinkOAuthResponse {
  UserCredential account = 1 [json_name = "account"];
  // Extensible fields: verification_id, state, etc.
}

// Unlink request
message UnlinkOAuthRequest {
  optional string credential_id = 1;
  OAuthProvider provider = 2;
  string provider_custom = 3;
}

message GetLinkedAccountRequest {
  string credential_id = 1;
}
message GetLinkedAccountResponse {
  UserCredential account = 1;
}

// Start / Confirm flow
message StartLinkOAuthRequest {
  OAuthProvider provider = 1 [(google.api.field_behavior) = REQUIRED];
  string provider_custom = 2;
  string redirect_uri = 3;
  repeated string scopes = 4;
  optional string state = 5;
}
message StartLinkOAuthResponse {
  optional string authorization_url = 1;
  optional string operation_id = 2;
  optional google.protobuf.Timestamp expires_at = 3;
  optional string display_hint = 4;
}

message ConfirmLinkOAuthRequest {
  optional string operation_id = 1;
  OAuthProvider provider = 2;
  string provider_custom = 3;
  oneof credential {
    string oauth_token = 10;
    string code = 11;
    string authorization_response = 12;
  }
  optional string state = 20;
  optional string display_name = 21;
}
message ConfirmLinkOAuthResponse {
  UserCredential account = 1;
  optional OAuthToken secret = 10;
}

// Refresh / Exchange / Revoke
message RefreshOAuthTokenRequest {
  string credential_id = 1;
  optional string refresh_token = 2 [(redact.v3.value).string = ""];
}
message RefreshOAuthTokenResponse {
  optional string access_token = 1 [(redact.v3.value).string = ""];
  optional google.protobuf.Timestamp expires_at = 2;
  repeated string scopes = 3;
  optional bool refresh_token_present = 4;
}

message ExchangeOAuthCodeRequest {
  OAuthProvider provider = 1;
  string provider_custom = 2;
  string code = 3 [(redact.v3.value).string = ""];
  string redirect_uri = 4;
}
message ExchangeOAuthCodeResponse {
  OAuthToken token = 1;
  ProviderMetadata provider = 2;
}

message RevokeLinkedAccountRequest {
  string credential_id = 1;
  optional string reason = 10;
}

// Provider list and metadata
message ListProvidersRequest {}
message ListProvidersResponse {
  repeated ProviderMetadata items = 1;
}

message GetProviderMetadataRequest {
  OAuthProvider provider = 1;
  optional string provider_custom = 2;
}
message ProviderMetadata {
  OAuthProvider provider = 1;
  string provider_custom = 2;
  string display_name = 3;
  string authorization_endpoint = 4;
  string token_endpoint = 5;
  repeated string default_scopes = 6;
  map<string, string> authorize_params = 10;
  map<string, string> token_params = 11;
}
